--- a/src/Views/teacher/modules/index.twig
+++ b/src/Views/teacher/modules/index.twig
@@ -22,7 +22,7 @@
 
   {% if modules is empty %}
     <div class="modules-empty-unique">
-      <img src="/assets/img/empty-modules.svg" alt="Nenhum módulo cadastrado" class="modules-empty-img-unique" />
+      <img src="/assets/images/icons/empty-modules.png" alt="Nenhum módulo cadastrado" class="modules-empty-img-unique" />
       <p>Nenhum módulo cadastrado ainda.</p>
       <a href="/teacher/courses/{{ course.id }}/modules/create" class="btn-modules-unique btn-primary-modules-unique mt-2-modules-unique">
         <i class="fas fa-plus-circle"></i> Criar primeiro módulo
