--- a/src/Views/layouts/partials_admin/header.twig
+++ b/src/Views/layouts/partials_admin/header.twig
@@ -4,6 +4,7 @@
       <li><a href="/admin">Dashboard</a></li>
       <li><a href="/admin/users">Usuários</a></li>
       <li><a href="/admin/events">Eventos</a></li>
+      <li><a href="/admin/support/chats">suporte</a></li>
       <li><a href="/">Voltar ao Site</a></li>
       <li><a href="/logout">Sair</a></li>
     </ul>
